tests/ui/const-generics/issues/issue-72352.min.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-72352.rs:7:42
   |
LL | unsafe fn unsafely_do_the_thing<const F: fn(&CStr) -> usize>(ptr: *const i8) -> usize {
   |                                          ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

